# pong-SFML

./: .gitignore  CMakeLists.txt  README.md  main.cc  pong-SFML.sln  vcpkg.json
lib/: CMakeLists.txt  resources.cpp  resources.hpp
pong-SFML/: config.h  main.cc  pong-SFML.vcxproj  pong-SFML.vcxproj.filters
pong-SFML/classes/: ball.cc  ball.h  game.cc  game.h  menu.cc  menu.h  player.cc  player.h
src/: CMakeLists.txt  ball.cc  ball.h  config.h  game.cc  game.h  menu.cc  menu.h  player.h
